Maj seq1 cycle 4

--- a/moncours.sty
+++ b/moncours.sty
@@ -223,7 +223,7 @@
 
 %------------------------------------------------------
 \newenvironment{myact}[1]{
-	\begin{pasbox}[title=Activite #1, style=rem ,degrade, color=Peach]
+	\begin{pasbox}[title=Activite #1, style=rem ,degrade, color=WildStrawberry]
 	}{
 \end{pasbox}
 }
