--- a/5e/1_localisation_eau/localisation_eau.tex
+++ b/5e/1_localisation_eau/localisation_eau.tex
@@ -3,7 +3,7 @@
 %\usepackage[left=1.5cm,right=1.5cm,top=1cm,bottom=2cm]{geometry}
 \usepackage[in, plain]{fullpage}
 \usepackage{array}
-\usepackage{../../pas-math}
+%\usepackage{../../pas-math}
 \usepackage{../../moncours}
 
 
@@ -20,13 +20,58 @@
 \begin{document}
 	
 	
-\chap[num=1, color=red]{Où trouve-t-on de l'eau sur Terre}{Olivier FINOT, \today }	
+\chap[num=1, color=red]{Où trouve-t-on de l'eau sur Terre ?}{Olivier FINOT, \today }	
 
-\section{Présence de l'eau}
+\section{L'eau dans notre environnement \footnotesize{(Activité 1 page 110-111)}}
 
-\begin{myact}{Activité 1 page 110-111}
-	eau
+\begin{myact}{}
+	\begin{enumerate}
+		\item Les grands réservoirs d'eau visibles sur ces documents sont \kw{les océans} et \kw{la banquise}.
+		\item Les palmiers arrivent à pousser en plein désert car \kw{ils ont de faibles besoins en eau}.
+		\item Les boissons nous sont nécessaires pour \kw{renouveler l'eau dans notre corps}.
+		\item \kw{Le c\oe ur} est l'organe du corps humain qui contient le plus d'eau.
+		\item \kw{La peau} est l'organe du corps humain qui contient le moins d'eau.
+	\end{enumerate}
 \end{myact}
 
-	
+\begin{mybilan}
+	Les océans, les fleuves et les glaces polaires sont les grands réservoirs d'eau de la Terre. Tous les êtres vivants contiennent de l'eau, ils en ont besoin pour vivre. \kw{L'eau est présente partout autour de nous, sans elle la vie ne pourrait pas exister}.
+\end{mybilan}
+
+\begin{myexos}
+	\begin{itemize}
+		\item 1 page 118
+		\item 9 page 119
+		\item 11 page 120
+	\end{itemize}
+\end{myexos}
+
+\section{Détecter la présence d'eau \footnotesize{Activité 2 page 112}}
+
+\begin{myact}{}
+	\begin{enumerate}
+		\item Le sulfate de cuivre anhydre est blanc.
+		\item Lorsque l'eau rentre en contact avec le sulfate de cuivre anhydre il devient bleu.
+		\item Lorsque l'on chauffe le sulfate de cuivre hydraté, il redevient blanc.
+		\item L'eau fait changer la couleur du sulfate de cuivre.
+		\item Le sulfate de cuivre hydraté change de couleur quand on le chauffe parce l'eau s'évapore.
+		\item Le sulfate de cuivre anhydre vire au bleu en présence d'eau.
+	\end{enumerate}
+\end{myact}
+
+\begin{mybilan}
+	En présence d'eau, le \kw{sulfate de cuivre anhydre} blanc, \kw{devient bleu}.
+	Lorsque l'on chauffe le sulfate de cuivre hydraté, \kw{l'eau s'évapore, il redevient blanc}.
+	Le sulfate de cuivre anhydre est utilisé pour détecter la présence d'eau.
+\end{mybilan}
+
+\begin{myexos}
+	\begin{itemize}
+		\item 3 page 118
+		\item 4 page 118
+		\item 6 page 119
+		\item 7 page 119
+		\item 13 page 120
+	\end{itemize}
+\end{myexos}
 \end{document}]
