--- a/utils_maths.tex
+++ b/utils_maths.tex
@@ -5,7 +5,7 @@
 \usepackage[frenchb]{babel}
 \usepackage{numprint}
 \usepackage[T1]{fontenc}
-\usepackage{lmodern}
+%\usepackage{lmodern}
 \usepackage{textcomp}
 \usepackage[french, boxed]{algorithm2e}
 
