--- a/utils_maths.tex
+++ b/utils_maths.tex
@@ -165,6 +165,16 @@
 %                    - Elements cours -
 %-------------------------------------------------------------------------------
 
+%Correction d'exercice
+\newcommand{\exoSec}[2]{\subsection*{Exercice #1 page #2}}
 %-------------------------------------------------------------------------------
 %                    - raccourcis d'écriture -
 %-------------------------------------------------------------------------------
+
+%Mise en évidence de termes clés
+\newcommand{\mykw}[1]{\textcolor{red}{\underline{\textbf{#1}}}}
+
+%Exercices
+\newcommand{\exo}[2]{exercice #1 page #2}
+\newcommand{\Exo}[2]{Exercice #1 page #2}
+
