--- a/5e/1_localisation_eau/localisation_eau.tex
+++ b/5e/1_localisation_eau/localisation_eau.tex
@@ -66,12 +66,117 @@
 \end{mybilan}
 
 \begin{myexos}
-	\begin{itemize}
-		\item 3 page 118
-		\item 4 page 118
-		\item 6 page 119
-		\item 7 page 119
-		\item 13 page 120
-	\end{itemize}
+	\begin{multicols}{2}
+	
+		\begin{itemize}
+			\item 2 page 118
+			\item 3 page 118
+			\item 4 page 118
+			\item 8 page 119
+			\item 13 page 120
+		\end{itemize}
+	
+	\end{multicols}
 \end{myexos}
+
+
+\appendix
+
+\newpage
+
+\section*{Correction des exercices}
+
+\subsection*{Exercice 1 p 118}
+
+\begin{enumerate}[label=\alph*)]
+	\item Dans ce document, il y a de l'eau dans : la mer, les pêcheurs, les poissons.
+	\item Le grand réservoir d'eau qui figure sur cette photo est une mer.
+\end{enumerate}
+
+\subsection*{Exercice 2 p 118}
+
+\begin{multicols}{2}
+	\begin{itemize}
+		\item qui ne contient pas d'eau : anhydre
+		\item sulfate de cuivre hydraté : bleu
+		\item sulfate de cuivre anhydre : blanc
+		\item qui a perdu de l'eau : déshydraté
+		\item qui a gagné de l'eau : hydraté
+	\end{itemize}
+\end{multicols}
+
+\subsection*{Exercice 3 p 118}
+\begin{multicols}{2}
+	\begin{enumerate}[label=\arabic*)]
+		\item sulfate de cuivre anhydre
+		\item sulfate de cuivre hydraté
+		\item eau
+		\item pipette
+	\end{enumerate}
+\end{multicols}
+
+\subsection*{Exercice 4 p 118}
+
+
+	\begin{enumerate}[label=\alph*)]
+		\item Pour détecter la présence d'eau de l'eau dans un liquide, on utilise du sulfate de cuivre \mykw{anhydre}.
+		
+		\item Le sulfate de cuivre anhydre est de couleur \mykw{bleue}.
+		\item Si on verse un peu de liquide sur du sulfate de cuivre anhydre et s'il reste blanc, alors le liquide \kw{ne contient pas} d'eau.
+		\item L'eau est \mykw{indispensable} à la vie. Le corps humain a un besoin vital \mykw{d'eau}.
+		\item Parmi les grands réservoirs d'eau, on trouve \mykw{les océans}.
+		\item Le constituant principal des boissons est \mykw{l'eau}.
+	\end{enumerate}
+
+
+\exoSec{8}{119}
+
+\begin{enumerate}[label=\alph*)]
+	\item Au début de l'expérience, le sulfate de cuivre est blanc.
+	\item Après quelques jours d'expérience, le sulfate de cuivre est bleu.
+	\item Cette expérience prouve qu'il ya de l'eau dans l'air.
+\end{enumerate}
+
+\exoSec{9}{119}
+
+\begin{enumerate}[label=\alph*)]
+	\item Aliments de l'exercice classés par ordre croissant de teneur en eau :
+	1) pain, 2) viande, 3) \oe uf / banane 5) pomme de terre, 6) poissons, 7) tomate, 8) laitue.
+	\item La variété de légume qui contient le plus d'eau est la laitue
+\end{enumerate}
+
+\newpage
+
+\subsection*{\Exo{11}{120}}
+
+\begin{enumerate}
+	\item  Le lave linge consomme au minimum 70 L pour chaque lavage. La famille effectue 5 lavages par semaine,un mois comporte 4 semaines. On a donc $4 \times 5 = 20$ lavages par mois. $20 \times 70 =\num{ 1400}$ La machine à laver le linge consomme donc au minimum $\num{1400}$ litres d'eau par mois.
+	
+	\item Un bain nécessite au minimum 150 L d'eau, et une douche 60 L. $150 \div 60 = \num{2.5}$, avec le volume d'eau nécessaire à un bain on peut prendre 2 douches courtes.
+	
+	\item Si une personne prend une douche au lieu d'un bain, elle économise 90 L d'eau. Pour un mois de 30 jours avec une douche par jour, cela représente une économie de \num{1800} litres d'eau ($30 \times 60 = \num{1800}$). Cela correspond à 60 douches supplémentaires. (Pour 28 jours : 1680 L d'eau économisés, soit 56 douches).
+\end{enumerate}
+
+\subsection*{\Exo{13}{120}}
+\begin{enumerate}[label=\alph*)]
+	\item Quantité d'eau absorbée par Yasmine et Sandrine pendant le repas :
+		\begin{itemize}
+			\item 50 g de pâtes : $70 \div 2 = 35$ , 35 ml;
+			\item 100 g de filets de dinde : 70 ml;
+			\item 20 cL (= 200 mL) de lait : $81 \times 2 = 162$, 162 mL;
+			\item 80g de pomme : $84 \times \num{0.80} = \num{67.2}$, \num{67,2} mL.
+		\end{itemize}
+		$35 + 70 + 162 + \num{67.2} = \num{334,2}$, chacune a absorbé \num{343.2} mL d'eau pendant le repas.
+	
+	
+	\item Quantité d'eau absorbée par Karim :
+		
+		\begin{itemize}
+			\item 50 g de pâtes : $70 \div 2 = 35$ , 35 ml;
+			\item 100 g de filets de dinde : 70 ml;
+			\item 2 pommes de 80 g : $2 \times \num{67.2} = \num{134.4}$, \num{134.4} mL;
+			\item 1 verre d'eau de 125 mL : 125 mL.
+		\end{itemize}
+		$35 + 70 + \num{134.4} + 125 = \num{364,4}$, il a donc absorbé plus d'eau que Yasmine et Sandrine.
+\end{enumerate}
 \end{document}]
