--- a/5e/1_localisation_eau/localisation_eau.tex
+++ b/5e/1_localisation_eau/localisation_eau.tex
@@ -20,7 +20,7 @@
 \begin{document}
 	
 	
-\chap[num=1, color=red]{Où trouve-t-on de l'eau sur Terre ?}{Olivier FINOT, \today }	
+\chap[num=1, color=blue]{Où trouve-t-on de l'eau sur Terre ?}{Olivier FINOT, \today }	
 
 \section{L'eau dans notre environnement \footnotesize{(Activité 1 page 110-111)}}
 
