--- a/5e/2_espace_gaz/espace_gaz.tex
+++ b/5e/2_espace_gaz/espace_gaz.tex
@@ -98,16 +98,20 @@ La \kw{vapeur d'eau} est de l'eau a l'état de \kw{gaz}. Un gaz n'a pas de forme
 \end{myact}
 
 \begin{mybilan}
-	L'eau peut contenir des \kw{gaz dissous}. On peut extraire ce gaz de l'eau qui le contient par \kw{agitation} ou par \kw{chauffage}. Le gaz est extrait par \kw{déplacement d'eau}, il prend la place de l'eau contenue dans le tube à essais.
+	\begin{multicols*}{2}
+				
+		L'eau peut contenir des \kw{gaz dissous}. On peut extraire ce gaz de l'eau qui le contient par 	\kw{agitation} ou par \kw{chauffage}. Le gaz est extrait par \kw{déplacement d'eau}, il prend la place de l'eau contenue dans le tube à essais.
+		
+		\includegraphics[scale=0.4]{img/recueilgaz}
+	
+\end{multicols*}.
 \end{mybilan}
 
 \begin{myexos}
 	\begin{multicols}{2}
 		
 		\begin{itemize}
-			\item \exo{}{}
-			\item \exo{}{}
-			\item \exo{}{}
+			\item \exo{4}{132}
 		\end{itemize}
 		
 	\end{multicols}
@@ -117,21 +121,26 @@ La \kw{vapeur d'eau} est de l'eau a l'état de \kw{gaz}. Un gaz n'a pas de forme
 
 \begin{myact}{4 page 127}
 	\begin{enumerate}
-		\item 
+		\item Le gaz prélevé dans la seringue a été extrait d'eau pétillante par déplacement d'eau.
+		\item Au début de l'expérience, la solution d'eau de chaux est incolore et transparente.
+		\item Après y avoir fait barboter le gaz l'eau de chaux s'est troublée.
+		\item Un précipité blanc s'est formé lors de cette expérience, donc le gaz dissous dans l'eau pétillante est du dioxyde de carbone.
 	\end{enumerate}
 \end{myact}
 
 \begin{mybilan}
-	
+	Les boissons pétillantes contiennent un gaz dissous, le \kw{dioxyde de carbone}.
+	Le \kw{test de reconnaissance à l'eau de chaux} permet d'identifier le dioxyde de carbone : en présence de dioxyde de carbone, un \kw{précipité blanc} se forme dans l'eau de chaux. On dit aussi que l'eau de chaux << se trouble >>.
 \end{mybilan}
 
 \begin{myexos}
 	\begin{multicols}{2}
 		
 		\begin{itemize}
-			\item \exo{}{}
-			\item \exo{}{}
-			\item \exo{}{}
+			\item \exo{3}{132}
+			\item \exo{11}{133}
+			\item \exo{12}{134} (DM ?)
+			\item \exo{15}{134}
 		\end{itemize}
 		
 	\end{multicols}
