ajout version beamer seq 4 5e, plus quelques maj pour faire fonctionner beamer

--- a/5e/2_espace_gaz/espace_gaz.tex
+++ b/5e/2_espace_gaz/espace_gaz.tex
@@ -8,6 +8,8 @@
 
 
 
+
+
 \input{../../utils_maths}
 
 
@@ -16,30 +18,18 @@
 \date{}
 \title{}
 
+\graphicspath{{./img/}}
 
 \begin{document}
 	
 	
-\chap[num=2, color=blue]{Quel espace un gaz peut-il occuper ?}{Olivier FINOT, \today }	
+\chap[num=4, color=blue]{Quel espace un gaz peut-il occuper ?}{Olivier FINOT, \today }	
 
 \section{La forme des liquides et des solides}
 
-\begin{myact}{1 page 124}
-	\begin{enumerate}
-		\item Non les glaçons n'ont pas la forme du récipient qui les contient.
-		\item Le liquide obtenu lorsque les glaçons ont fondu a la forme du récipient.
-		\item La surface libre du liquide est plane.
-		\item On peut saisir un glaçon avec ses doigts, mais pas de l'eau liquide.
-		\item Lorsqu'il est placé dans des récipients de forme différentes, un solide conserve sa forme.
-		\item Un solide a une forme propre parce qu'elle ne change pas.
-		\item Un liquide placé dans dans des récipients de formes différentes prend la forme de ces récipients.
-		\item Le fil à plomb indique la direction verticale, donc le petit côté de l'équerre indique la direction horizontale. On en déduit que la surface libre d'un liquide au repos est horizontale. 
-	\end{enumerate}
-\end{myact}
+\input{./activite1}
 
-\begin{mybilan}
-	Un \kw{solide} a une \kw{forme propre} qui ne change pas, on peut le saisir. Un \kw{liquide} prend la \kw{forme du récipient} qui le contient. La surface d'un liquide en contact avec l'air est sa surface libre. Au repos, cette surface libre est \kw{plane et horizontale}.
-\end{mybilan}
+\input{./bilan1}
 
 \begin{myexos}
 	\twoCol{
@@ -52,22 +42,9 @@
 
 \section{Les propriétés des gaz}
 
-\begin{myact}{2 page 125}
-	\begin{enumerate}
-		\item Lorsque l'eau bout, il se forme de la vapeur dans l'erlenmeyer.
-		\item La vapeur d'eau emprisonnée dans l'erlenmeyer occupe tout l'espace disponible.
-		\item Quand les deux erlenmeyers sont en communication, on voit apparaître de la buée sur la paroi, car la vapeur est montée dans le deuxième erlenmeyer.
-		\item Après la mise en communication, la vapeur occupe l'espace des deux erlenmeyers.
-		\item Lorsque l'on appuie sur le piston, le volume d'air contenu dans la seringue fermée diminue.
-		\item Non, la vapeur d'eau n'a pas de forme propre.
-		\item La vapeur d'eau est expansible car lorsque l'on ajoute le second erlenmeyer, elle l'occupe en plus du premier.
-		\item Lorsque l'on appuie sur le piston de la seringue fermée, le volume d'air diminue, l'air est donc compressible.
-	\end{enumerate}
-\end{myact}
+\input{./activite2}
 
-\begin{mybilan}
-La \kw{vapeur d'eau} est de l'eau a l'état de \kw{gaz}. Un gaz n'a pas de forme propre, il occupe tout l'espace disponible : il est \kw{expansible}. Un gaz est \kw{compressible}, on peut diminuer sons volume en le comprimant.	
-\end{mybilan}
+\input{./bilan2}
 
 
 \begin{myexos}
@@ -85,27 +62,9 @@ La \kw{vapeur d'eau} est de l'eau a l'état de \kw{gaz}. Un gaz n'a pas de forme
 
 \section{Des gaz dans l'eau}
 
-\begin{myact}{3 page 126}
-	\begin{enumerate}
-		\item Au début de l'expérience le tube à essais contient de l'eau.
-		\item Au cours de l'expérience, dans le tube à essais des bulles apparaissent et le niveau de l'eau diminue.
-		\item Le bain-marie est à \num{57.6} °C.
-		\item Non il n'est pas nécessaire de faire beaucoup chauffer l'eau pétillante pour en récupérer le gaz.
-		\item Au cours de l'expérience, l'eau des tubes à essais est remplacée par du gaz.
-		\item Le gaz dégagé est récupéré par déplacement d'eau car il prend la place de l'eau contenue dans le tube à essais.
-		\item Pour récupérer le gaz contenu dans le l'eau pétillante on peut l'agiter  ou la chauffer.
-	\end{enumerate}
-\end{myact}
+\input{./activite3}
 
-\begin{mybilan}
-	\begin{multicols*}{2}
-				
-		L'eau peut contenir des \kw{gaz dissous}. On peut extraire ce gaz de l'eau qui le contient par 	\kw{agitation} ou par \kw{chauffage}. Le gaz est extrait par \kw{déplacement d'eau}, il prend la place de l'eau contenue dans le tube à essais.
-		
-		\includegraphics[scale=0.4]{img/recueilgaz}
-	
-\end{multicols*}.
-\end{mybilan}
+\input{./bilan3}
 
 \begin{myexos}
 	\begin{multicols}{2}
@@ -119,19 +78,9 @@ La \kw{vapeur d'eau} est de l'eau a l'état de \kw{gaz}. Un gaz n'a pas de forme
 
 \section{Reconnaître le dioxyde de carbone}
 
-\begin{myact}{4 page 127}
-	\begin{enumerate}
-		\item Le gaz prélevé dans la seringue a été extrait d'eau pétillante par déplacement d'eau.
-		\item Au début de l'expérience, la solution d'eau de chaux est incolore et transparente.
-		\item Après y avoir fait barboter le gaz l'eau de chaux s'est troublée.
-		\item Un précipité blanc s'est formé lors de cette expérience, donc le gaz dissous dans l'eau pétillante est du dioxyde de carbone.
-	\end{enumerate}
-\end{myact}
+\input{./activite4}
 
-\begin{mybilan}
-	Les boissons pétillantes contiennent un gaz dissous, le \kw{dioxyde de carbone}.
-	Le \kw{test de reconnaissance à l'eau de chaux} permet d'identifier le dioxyde de carbone : en présence de dioxyde de carbone, un \kw{précipité blanc} se forme dans l'eau de chaux. On dit aussi que l'eau de chaux << se trouble >>.
-\end{mybilan}
+\input{./bilan4}
 
 \begin{myexos}
 	\begin{multicols}{2}
@@ -152,100 +101,5 @@ La \kw{vapeur d'eau} est de l'eau a l'état de \kw{gaz}. Un gaz n'a pas de forme
 
 \section*{Correction des exercices}
 
-\subsection*{\Exo{2}{132}}
-
-	
-	\setlength{\tabcolsep}{4pt}
-	\begin{tabular}{|l|c|c|c|}
-		\hline
-		\textbf{Caractéristiques}                                                                            & \textbf{Solides} & \textbf{Liquides} & \textbf{Gaz} \\ \hline
-		Ils ont une forme propre                                                                             & x                &                   &              \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Ils occupent tout le volume \\ du récipient qui les contient\end{tabular} &                  &                   & x            \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Au repos, leur surface libre\\  est plane et horizontale\end{tabular}     &                  & x                 &              \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Ils prennent la forme du \\ récipient qui les contient\end{tabular}       &                  & x                 & x            \\ \hline
-		On peut les saisir avec les doigts                                                                   & x                &                   &              \\ \hline
-	\end{tabular}
-
-\subsection*{\Exo{6}{133}}
-
-\begin{enumerate}[label=\alph*)]
-	\item La surface libre d'un liquide est la surface en contact avec l'air.
-	\item Le rôle du fil à plomb est d'indiquer la direction verticale et celui de l'équerre est d'indiquer la direction horizontale.
-	\item On en conclu que la surface libre du liquide est horizontale.
-\end{enumerate}
-\subsection*{\Exo{3}{132}}
-
-\begin{enumerate}[label=\alph*)]
-	\item \twoCol{\begin{enumerate}
-		\item Eau pétillante
-		\item Ballon
-		\item Tube à dégagement
-		\item Tube à essais
-		\item Eau de chaux
-		\item Précipité blanc
-	\end{enumerate}}
-	
-	\item De l'eau pétillante est placée dans un ballon. Le gaz contenu dans l'eau pétillante est extrait dans un tube à dégagement. L'autre extrémité du tube à dégagement est placée dasn un tube à essais qui contient de l'eau de chaux. Un précipité blanc se forme, le gaz dissous dans l'eau pétillante est du dioxyde de carbone.
-\end{enumerate}
-
-\subsection*{\Exo{4}{132}}
-
-\begin{enumerate}[label=\alph*)]
-	\item L'eau peut contenir des gaz \mykw{dissous}.
-	\item On peut extraire un gaz d'une boisson pétillante en \mykw{agitant} ou en \mykw{chauffant} le liquide.
-	\item Les gaz extraits sont récupérés par \mykw{déplacement} d'eau.
-	\item Le gaz dissous dans une eau pétillante est du \mykw{dioxyde de carbone}.
-	\item Pour l'identifier, on utilise le test à \mykw{l'eau de chaux}. En sa présence il se forme un \mykw{précipité blanc}.
-\end{enumerate}
-
-\subsection*{\Exo{5}{133}}
-
-\begin{enumerate}[label=\alph*)]
-	\item 
-
-\begin{tabular}{|l|c|c|}
-	\hline
-	\textbf{Mot}        & \textbf{\'Etat solide} & \textbf{\'Etat liquide} \\ \hline
-	pluie      &               & x              \\ \hline
-	nuages     &               & x              \\ \hline
-	buée       &               & x              \\ \hline
-	glaciers   & x             &                \\ \hline
-	mer        &               & x              \\ \hline
-	neige      & x             &                \\ \hline
-	givre      & x             &                \\ \hline
-	brouillard &               & x              \\ \hline
-	rivière    &               & x             \\ \hline
-\end{tabular}
-
-\item L'état gazeux n'est pas représenté.
-\item On ne peut pas le voir car la vapeur d'eau est invisible.
-
-\end{enumerate}
-
-\subsection*{\Exo{8}{133}}
-
-\begin{enumerate}[label=\alph*)]
-	\item Le volume d'un gaz que l'on comprime diminue.
-	\item Seringues classées par ordre croissant de compression : 2 ; 1 ; 3
-\end{enumerate}
-
-\subsection*{\Exo{11}{133}}
-
-\begin{enumerate}[label=\alph*)]
-	\item On observe que l'eau de chaux se trouble.
-	\item On peut conclure que l'air expiré par Marine contient du dioxyde de carbone.
-\end{enumerate}
-
-\subsection*{\Exo{14}{134}}
-\begin{enumerate}[label=\alph*)]
-	\item Le contenu du flacon supérieur est devenu roux.
-	\item Lorsque la coupelle a été enlevée le gaz présent dans le flacon du dessous s'est étendu pour occuper l'espace du flacon du haut.
-\end{enumerate}
-
-\subsection*{\Exo{15}{134}}
-\begin{enumerate}[label=\alph*)]
-	\item Le ballon gonfle rapide car l'eau a été <<renforcée en gaz de la source>>.
-	\item Le gaz présent dans cette eau minérale est du dioxyde de carbone.
-	\item Pour le mettre en évidence on peut faire le test de reconnaissance à l'eau de chaux.
-\end{enumerate}
+\input{./corrections}
 \end{document}]
