--- a/utils_maths.tex
+++ b/utils_maths.tex
@@ -54,8 +54,8 @@
 
 
 %-------------------------------------------------------------------------------
-
-
+% Pour pouvoir exploiter les fichiers directement dans beamer
+\newcommand{\pause}{\ }
 %-------------------------------------------------------------------------------
 %                    - Mise en forme avancée
 %-------------------------------------------------------------------------------
