--- a/utils_maths_beamer.tex
+++ b/utils_maths_beamer.tex
@@ -123,4 +123,9 @@
 \newcommand{\homo}{homothétie}
 \newcommand{\homos}{homothéties}
 
+
+
+
 %----------------------------------------------------
+% Environnements de cours
+%------------------------------------------------------
