Ajout nouvelles séquences et réoganisation ordre

--- a/5e/5_localisation_eau/localisation_eau.tex
+++ b/5e/5_localisation_eau/localisation_eau.tex
@@ -20,11 +20,11 @@
 \begin{document}
 	
 	
-\chap[num=1, color=blue]{Où trouve-t-on de l'eau sur Terre ?}{Olivier FINOT, \today }	
+\chap[num=5, color=blue]{Où trouve-t-on de l'eau sur Terre ?}{Olivier FINOT, \today }	
 
-\section{L'eau dans notre environnement \footnotesize{(Activité 1 page 110-111)}}
+\section{L'eau dans notre environnement}
 
-\begin{myact}{}
+\begin{myact}{1 page 110-111}
 	\begin{enumerate}
 		\item Les grands réservoirs d'eau visibles sur ces documents sont \kw{les océans} et \kw{la banquise}.
 		\item Les palmiers arrivent à pousser en plein désert car \kw{ils ont de faibles besoins en eau}.
@@ -46,9 +46,9 @@
 	\end{itemize}
 \end{myexos}
 
-\section{Détecter la présence d'eau \footnotesize{Activité 2 page 112}}
+\section{Détecter la présence d'eau}
 
-\begin{myact}{}
+\begin{myact}{2 page 112}
 	\begin{enumerate}
 		\item Le sulfate de cuivre anhydre est blanc.
 		\item Lorsque l'eau rentre en contact avec le sulfate de cuivre anhydre il devient bleu.
