--- a/4e/1_Tensions_electrique/tension_electrique.tex
+++ b/4e/1_Tensions_electrique/tension_electrique.tex
@@ -133,33 +133,48 @@
 
 \section*{Correction des exercices}
 
-\subsection*{}
+\subsection*{\exo{5}{97}}
 
-\begin{enumerate}[label=\alph*)]
-	\item 
-\end{enumerate}
+\twoCol{
+\begin{itemize}
+	\item 1 $mV$ $=$ \textbf{\num{0.001}} $V$
+	\item 1 $V$ $=$ \textbf{\num{1000}} $mV$
+	\item 1 $kV$ $=$ \textbf{\num{1000}} $V$
+	\item 1 $V$ $=$ \textbf{\num{0.001}} $kV$
+	\item 1 $kV$ $=$ \textbf{\num{1000000}} $mV$
+\end{itemize}}
 
-\subsection*{}
+\subsection*{\exo{6}{97}}
 
-\begin{multicols}{2}
-	\begin{itemize}
-		\item 
-	\end{itemize}
-\end{multicols}
 
-\subsection*{}
+	\begin{enumerate}
+		\item Incorrect : la borne COM du voltmètre doit être reliée à la borne négative $(-)$ du générateur.
+		\item Incorrect : la borne rouge du voltmètre doit être reliée à la borne positive $(+)$ du générateur.
+		\item Le montage est correct.
+	\end{enumerate}
+
+
+\subsection*{\exo{7}{97}}
 \begin{multicols}{2}
 	\begin{enumerate}
 		\item 
 	\end{enumerate}
 \end{multicols}
 
-\subsection*{}
+\subsection*{\exo{8}{97}}
 
 
 	\begin{enumerate}[label=\alph*)]
 		\item 
 	\end{enumerate}
 
+\subsection*{\exo{14}{98}}
 
+\subsection*{\exo{15}{98}}
+
+\subsection*{\exo{17}{98}}
+
+\subsection*{\exo{18}{99}}
+
+\subsection*{\exo{20}{99}}
 \end{document}]
