--- a/utils_maths.tex
+++ b/utils_maths.tex
@@ -8,6 +8,7 @@
 %\usepackage{lmodern}
 \usepackage{textcomp}
 \usepackage[french, boxed]{algorithm2e}
+\usepackage{hyperref}
 
 
 %-------------------------------------------------------------------------------
@@ -32,6 +33,7 @@
 \usepackage{indentfirst} %%pour que les premier paragraphes soient aussi indentés
 \usepackage{verbatim}
 \usepackage{enumitem}
+\usepackage{booktabs}
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 
 \usepackage{variations}
