--- a/utils_maths_beamer.tex
+++ b/utils_maths_beamer.tex
@@ -2,7 +2,7 @@
 %          -Packages nécessaires pour écrire en Français et en UTF8-
 %-------------------------------------------------------------------------------
 \usepackage[utf8]{inputenc}
-\usepackage[frenchb]{babel}
+\usepackage[french]{babel}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{textcomp}
